Fix dark mode colours for <kbd>

--- a/src/dark-mode.css
+++ b/src/dark-mode.css
@@ -19,6 +19,8 @@
     --code-background-color: var(--grey-90);
     --code-color: var(--blue-30);
     --code-border-color: var(--grey-80);
+    --kbd-color: var(--blue-30);
+    --kbd-border-color: var(--grey-80);
   }
 
   /* Custom fixes */
